<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/con1Image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contactImg"
                app:srcCompat="@mipmap/contact1" />

            <Button
                android:id="@+id/con1Call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call" />

            <Button
                android:id="@+id/con1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/textOptions" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/con2Image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contactImg"
                app:srcCompat="@mipmap/contact2" />

            <Button
                android:id="@+id/con2Call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call" />

            <Button
                android:id="@+id/con2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/textOptions"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/con3Image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contactImg"
                app:srcCompat="@mipmap/contact3" />

            <Button
                android:id="@+id/con3Call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call" />

            <Button
                android:id="@+id/con3Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/textOptions"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>